RESOLVED FIXED54982
Grammar correction from Spelling & Grammar window doesn't work
https://bugs.webkit.org/show_bug.cgi?id=54982
Summary Grammar correction from Spelling & Grammar window doesn't work
Anders Carlsson
Reported 2011-02-22 12:21:20 PST
Grammar correction from Spelling & Grammar window doesn't work
Attachments
Patch (10.25 KB, patch)
2011-02-22 12:25 PST, Anders Carlsson
mitz: review+
Anders Carlsson
Comment 1 2011-02-22 12:25:10 PST
mitz
Comment 2 2011-02-22 12:58:05 PST
Comment on attachment 83362 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=83362&action=review > Source/WebKit2/UIProcess/mac/TextCheckerMac.mm:309 > + NSString* grammarUserDescription = grammarDetail.userDescription; Misplaced star
Anders Carlsson
Comment 3 2011-02-22 13:01:12 PST
Note You need to log in before you can comment on or make changes to this bug.